--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ user.username=${user.username}
 user.password=${user.password}
 
 site.url=http://www.google.com
-webdriver.chome.location=D:\\Workspace\\SELENIUM\\drivers\\chromedriver.exe
+webdriver.chrome.driver=src/main/resources/drivers/chrome/chromedriver.exe
 
 browser.name=${browser.name}
 browser.version=${browser.version}
