Refactor code + Add more properties + Adapt singleton in PropertyLoader

--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
 			<groupId>org.testng</groupId>
 			<artifactId>testng</artifactId>
 			<version>6.9.6</version>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.seleniumhq.selenium</groupId>
@@ -55,7 +56,7 @@
 		<dependency>
 			<groupId>org.seleniumhq.selenium</groupId>
 			<artifactId>selenium-support</artifactId>
-			<version>3.0.1</version>
+			<version>${selenium-version}</version>
 		</dependency>
 	</dependencies>
 	<build>
@@ -73,6 +74,13 @@
 				<configuration>
 					<encoding>UTF-8</encoding>
 				</configuration>
+				<dependencies>
+					<dependency>
+						<groupId>org.apache.maven.shared</groupId>
+						<artifactId>maven-filtering</artifactId>
+						<version>1.3</version>
+					</dependency>
+				</dependencies>
 			</plugin>
 			<plugin>
 				<artifactId>maven-surefire-plugin</artifactId>
@@ -102,10 +110,12 @@
 				<user.username></user.username>
 				<user.password></user.password>
 				<grid2.hub></grid2.hub>
-				<site.url></site.url>
 				<browser.name></browser.name>
 				<browser.version></browser.version>
 				<browser.platform></browser.platform>
+				<site.url>http://www.google.com</site.url>
+				<webdriver.chrome.driver>src/main/resources/drivers/chrome/chromedriver.exe</webdriver.chrome.driver>
+				<timeout.element>10</timeout.element>
 			</properties>
 			<activation>
 				<activeByDefault>true</activeByDefault>
@@ -118,10 +128,12 @@
 				<user.username></user.username>
 				<user.password></user.password>
 				<grid2.hub></grid2.hub>
-				<site.url></site.url>
 				<browser.name></browser.name>
 				<browser.version></browser.version>
 				<browser.platform></browser.platform>
+				<site.url>http://www.google.com</site.url>
+				<webdriver.chrome.driver>src/main/resources/drivers/chrome/chromedriver.exe</webdriver.chrome.driver>
+				<timeout.element>10</timeout.element>
 			</properties>
 		</profile>
 		<profile>
@@ -131,10 +143,12 @@
 				<user.username></user.username>
 				<user.password></user.password>
 				<grid2.hub></grid2.hub>
-				<site.url></site.url>
 				<browser.name></browser.name>
 				<browser.version></browser.version>
 				<browser.platform></browser.platform>
+				<site.url>http://www.google.com</site.url>
+				<webdriver.chrome.driver>src/main/resources/drivers/chrome/chromedriver.exe</webdriver.chrome.driver>
+				<timeout.element>10</timeout.element>
 			</properties>
 		</profile>
 		<profile>
@@ -144,10 +158,12 @@
 				<user.username></user.username>
 				<user.password></user.password>
 				<grid2.hub></grid2.hub>
-				<site.url></site.url>
 				<browser.name></browser.name>
 				<browser.version></browser.version>
 				<browser.platform></browser.platform>
+				<site.url>http://www.google.com</site.url>
+				<webdriver.chrome.driver>src/main/resources/drivers/chrome/chromedriver.exe</webdriver.chrome.driver>
+				<timeout.element>10</timeout.element>
 			</properties>
 		</profile>
 		<profile>
