--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,11 @@
+#Place holder value in pom.xml
+
 user.username=${user.username}
 user.password=${user.password}
-
-site.url=http://www.google.com
-webdriver.chrome.driver=src/main/resources/drivers/chrome/chromedriver.exe
-
 browser.name=${browser.name}
 browser.version=${browser.version}
 browser.platform=${browser.platform}
+
+site.url=http://www.google.com
+webdriver.chrome.driver=${webdriver.chrome.driver}
+timeout.element=${timeout.element}
